PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ReturnExpressionNecessary.pf
module ReturnExpressionNecessary {

    fun testNothing() : Void {
        i Int = 0
    }

    fun testSomething() : Int {
        i Int = 0

        // should throw error: return required
    }
}